Fixed setup.py dependencies.
Upgrading:
- controlfreak 1.1.3
- SQLAlchemy 0.6 (WARNING: GenericDAO API may break)
- mod_pywebsocket 0.5

New libraries for testing:
- nose 0.11
- pmock 0.3

Updated find_links URLs to match new versions of source distribution packages at galaktia.googlecode.com/files.

Fixed full screen issue: no 10 px offset on the right and bottom and no scrollbars (body overflow: hidden).

--- a/trunk/web/assets/css/galaktia.css
+++ b/trunk/web/assets/css/galaktia.css
@@ -2,6 +2,7 @@ body {
 	font-family: Helvetica, sans-serif;
 	background: #111;
 	margin: 0 auto;
+	overflow: hidden;
 }
 #canvas {
 	position: absolute;
@@ -12,7 +13,8 @@ body {
 	position: absolute;
 	left: 0;
 	bottom: 0;
-	width: 99%;
+	width: 100%;
+	overflow: auto;
 	height: 120px;
 	border: 0;
 	color: #eee;
